# tauri

./: LICENSE  README.md  jsconfig.json  package.json  pnpm-lock.yaml  vite.config.js  windi.config.js
src/: App.vue  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: top-toolbar.vue
src/components/login/: index.vue
src/router/: index.js
src/stores/: user.js
src/views/: index.vue  test.vue
